--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 13/05/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">61 - 18 - 44 - 72 - 10</p>
-                <p class="machine">75 - 20 - 39 - 6 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">86 - 85 - 24 - 70 - 38</p>
-                <p class="machine">46 - 44 - 48 - 37 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">47 - 29 - 31 - 30 - 49</p>
-                <p class="machine">12 - 80 - 27 - 75 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">58 - 87 - 50 - 37 - 40</p>
-                <p class="machine">1 - 21 - 15 - 10 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">76 - 26 - 41 - 33 - 39</p>
-                <p class="machine">24 - 21 - 68 - 51 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">2 - 35 - 80 - 60 - 4</p>
-                <p class="machine">87 - 50 - 39 - 8 - 40</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 14/05/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">lucky G</h3>
                 <p class="winning">66 - 22 - 65 - 7 - 34</p>
-                <p class="machine"></p>        
+                <p class="machine">30 - 53 - 41 - 54 - 75</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">73 - 34 - 69 - 49 - 58</p>
                 <p class="machine">47 - 54 - 6 - 5 - 50</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 15/04/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">71 - 33 - 39 - 80 - 11</p>
+                <p class="machine">18 - 67 - 57 - 36 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">51 - 18 - 42 - 64 - 90</p>
+                <p class="machine">21 - 23 - 45 - 86 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">55 - 30 - 16 - 54 - 73</p>
+                <p class="machine">40 - 61 - 53 - 41 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
