--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -787,11 +787,11 @@
                     <td class="winning" id="lbw">34</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">30</td>
+                    <td class="machine">53</td>
+                    <td class="machine">41</td>
+                    <td class="machine">54</td>
+                    <td class="machine" id="lbm">75</td>
                 </tr>
             </tbody> 
 
