--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">40 - 61 - 53 - 41 - 11</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">24 - 25 - 48 - 44 - 85</p>
+                <p class="machine">45 - 87 - 61 - 3 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">20 - 47 - 23 - 66 - 71</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">1 - 69 - 87 - 79 - 35</p>
+                <p class="machine">26 - 24 - 31 - 78 - 20</p>        
             </article>
         </section>
     </div>
