--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,41 +198,7 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 14/05/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">57 - 32 - 30 - 37 - 13</p>
-                <p class="machine">48 - 1 - 56 - 25 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">30 - 87 - 37 - 48 - 85</p>
-                <p class="machine">41 - 63 - 13 - 28 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">30 - 50 - 69 - 38 - 80</p>
-                <p class="machine">62 - 66 - 15 - 88 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">29 - 80 - 13 - 68 - 83</p>
-                <p class="machine">39 - 26 - 9 - 7 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">lucky G</h3>
-                <p class="winning">66 - 22 - 65 - 7 - 34</p>
-                <p class="machine">30 - 53 - 41 - 54 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">73 - 34 - 69 - 49 - 58</p>
-                <p class="machine">47 - 54 - 6 - 5 - 50</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
-            <h2 class="date">wednesday 15/04/2024</h2>
+            <h2 class="date">wednesday 15/05/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
                 <p class="winning">71 - 33 - 39 - 80 - 11</p>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">20 - 47 - 23 - 66 - 71</p>
-                <p class="machine"></p>        
+                <p class="machine">79 - 74 - 1 - 69 - 44</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">1 - 69 - 87 - 79 - 35</p>
                 <p class="machine">26 - 24 - 31 - 78 - 20</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 16/05/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">40 - 75 - 53 - 13 - 19</p>
+                <p class="machine">36 - 41 - 34 - 15 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">76 - 6 - 64 - 58 - 59</p>
+                <p class="machine">9 - 40 - 52 - 78 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">42 - 9 - 60 - 71 - 23</p>
+                <p class="machine">37 - 89 - 29 - 1 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
