--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -786,11 +786,11 @@
                     <td class="winning" id="lbw">71</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">79</td>
+                    <td class="machine">74</td>
+                    <td class="machine">1</td>
+                    <td class="machine">69</td>
+                    <td class="machine" id="lbm">44</td>
                 </tr>
             </tbody> 
 
