--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -1508,6 +1508,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">40</td>
+                    <td class="days"><small>May 16th thurs</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">40</td>
+                    <td class="winning">75</td>
+                    <td class="winning">53</td>
+                    <td class="winning">13</td>
+                    <td class="winning" id="lbw">19</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">36</td>
+                    <td class="machine">41</td>
+                    <td class="machine">34</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">29</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day41-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">41</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
