--- a/index.html
+++ b/index.html
@@ -227,10 +227,9 @@
             </section>
 
                                     <!-- classification-->
-            <aside class="classification-wrapper" id="dragClassification" draggable="true" >
-                <!-- <a href="classification.html" class="counterpart">Click to View in Main Page</a>  -->
+            <!-- <aside class="classification-wrapper" id="dragClassification" draggable="true" >
                 <iframe title="numbers classification chart" src="classification.html" class="classification"  id="dis"></iframe>
-            </aside> 
+            </aside>  -->
         </main>
 
                                  <!-- disclaimer-->
