--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -1500,21 +1500,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">40</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>May 16th thurs</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">81</td>
+                    <td class="winning">22</td>
+                    <td class="winning">71</td>
+                    <td class="winning">11</td>
+                    <td class="winning" id="lbw">75</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">33</td>
+                    <td class="machine">13</td>
+                    <td class="machine">20</td>
+                    <td class="machine">88</td>
+                    <td class="machine" id="lbm">6</td>
                 </tr>
             </tbody> 
         </table>
