--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">37 - 89 - 29 - 1 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">International</h3>
+                <p class="winning">89 - 50 - 60 - 66 - 76</p>
+                <p class="machine">65 - 15 - 57 - 5 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">2 - 38 - 18 - 44 - 1</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">81 - 22 - 71 - 11 - 75</p>
+                <p class="machine">33 - 13 - 20 - 88 - 6</p>        
             </article>
         </section>
     </div>
