--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -786,11 +786,11 @@
                     <td class="winning" id="lbw">1</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">15</td>
+                    <td class="machine">68</td>
+                    <td class="machine">69</td>
+                    <td class="machine">79</td>
+                    <td class="machine" id="lbm">50</td>
                 </tr>
             </tbody> 
 
