--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -1517,6 +1517,28 @@
                     <td class="machine" id="lbm">6</td>
                 </tr>
             </tbody> 
+
+                                    <!-- day41-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">41</td>
+                    <td class="days"><small></small></td>
+                
+                    <!-- winning-->
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning"></td>
+                    <td class="winning" id="lbw"></td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
         </table>
         <span>Bingo</span>
 
