--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">wednesday 15/05/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">71 - 33 - 39 - 80 - 11</p>
-                <p class="machine">18 - 67 - 57 - 36 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">51 - 18 - 42 - 64 - 90</p>
-                <p class="machine">21 - 23 - 45 - 86 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">55 - 30 - 16 - 54 - 73</p>
-                <p class="machine">40 - 61 - 53 - 41 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">24 - 25 - 48 - 44 - 85</p>
-                <p class="machine">45 - 87 - 61 - 3 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">20 - 47 - 23 - 66 - 71</p>
-                <p class="machine">79 - 74 - 1 - 69 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">1 - 69 - 87 - 79 - 35</p>
-                <p class="machine">26 - 24 - 31 - 78 - 20</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">thursday 16/05/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Fortune</h3>
                 <p class="winning">2 - 38 - 18 - 44 - 1</p>
-                <p class="machine"></p>        
+                <p class="machine">15 - 68 - 69 - 79 - 50</p>        
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
                 <p class="winning">81 - 22 - 71 - 11 - 75</p>
                 <p class="machine">33 - 13 - 20 - 88 - 6</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">friday 17/05/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">62 - 69 - 26 - 77 - 1</p>
+                <p class="machine">42 - 14 - 70 - 13 - 59</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">12 - 66 - 74 - 82 - 16</p>
+                <p class="machine">28 - 26 - 7 - 80 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">90 - 9 - 5 - 39 - 35</p>
+                <p class="machine">69 - 86 - 14 - 29 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">79 - 74 - 17 - 86 - 47</p>
+                <p class="machine">85 - 11 - 71 - 41 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">22 - 52 - 61 - 3 - 41</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">36 - 44 - 27 - 57 - 16</p>
+                <p class="machine">28 - 11 - 4 - 37 - 85</p>        
             </article>
         </section>
     </div>
