--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1501,6 +1501,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">40</td>
+                    <td class="days"><small>May 18th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">85</td>
+                    <td class="winning">63</td>
+                    <td class="winning">33</td>
+                    <td class="winning">3</td>
+                    <td class="winning" id="lbw">28</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">41</td>
+                    <td class="machine">13</td>
+                    <td class="machine">1</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">34</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day41-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">41</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
