--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -780,11 +780,11 @@
                     <td class="winning" id="lbw">41</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">83</td>
+                    <td class="machine">68</td>
+                    <td class="machine">66</td>
+                    <td class="machine">34</td>
+                    <td class="machine" id="lbm">4</td>
                 </tr>
             </tbody> 
 
