--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1502,6 +1502,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">40</td>
+                    <td class="days"><small>May 18th sat</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">74</td>
+                    <td class="winning">67</td>
+                    <td class="winning">29</td>
+                    <td class="winning">31</td>
+                    <td class="winning" id="lbw">13</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">50</td>
+                    <td class="machine">38</td>
+                    <td class="machine">17</td>
+                    <td class="machine">19</td>
+                    <td class="machine" id="lbm">71</td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day41-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">41</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
@@ -1519,7 +1541,6 @@
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody> 
-
         </table>
         <span>Club Master</span>
     </main>
