--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">thursday 16/05/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">40 - 75 - 53 - 13 - 19</p>
-                <p class="machine">36 - 41 - 34 - 15 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">76 - 6 - 64 - 58 - 59</p>
-                <p class="machine">9 - 40 - 52 - 78 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">42 - 9 - 60 - 71 - 23</p>
-                <p class="machine">37 - 89 - 29 - 1 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">89 - 50 - 60 - 66 - 76</p>
-                <p class="machine">65 - 15 - 57 - 5 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">2 - 38 - 18 - 44 - 1</p>
-                <p class="machine">15 - 68 - 69 - 79 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">81 - 22 - 71 - 11 - 75</p>
-                <p class="machine">33 - 13 - 20 - 88 - 6</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">friday 17/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Bonanza</h3>
                 <p class="winning">22 - 52 - 61 - 3 - 41</p>
-                <p class="machine"></p>        
+                <p class="machine">83 - 68 - 66 - 34 - 4</p>        
             </article>
             <article>
                 <h3 class="game">vag</h3>
                 <p class="winning">36 - 44 - 27 - 57 - 16</p>
                 <p class="machine">28 - 11 - 4 - 37 - 85</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">saturday 18/05/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">20 - 27 - 36 - 3 - 35</p>
+                <p class="machine">47 - 39 - 60 - 67 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">85 - 63 - 33 - 3 - 28</p>
+                <p class="machine">41 - 13 - 1 - 23 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">74 - 67 - 29 - 31 - 13</p>
+                <p class="machine">50 - 38 - 17 - 19 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
