--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
         <meta name="description" content="Visual Lotto Board is a platform that provides information related to Premier Lotto (Baba Ijebu) and Ghana lottery results. You can find past and current results on your devices through this service">
 
-        <meta property="og:title" content="Visual Lotto Board">
+        <meta property="og:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
         <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
         <meta property="og:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">
         <meta property="og:image:alt" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
@@ -245,8 +245,7 @@
             </div>
         </footer>
         <!-- <script src="/Scripts/loading.js"></script> -->
-        <!-- <script src="script.js"></script> -->
-        <script src="/Scripts/carry1st.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
         
