--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -779,11 +779,11 @@
                     <td class="winning" id="lbw">27</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">33</td>
+                    <td class="machine">10</td>
+                    <td class="machine">48</td>
+                    <td class="machine">44</td>
+                    <td class="machine" id="lbm">16</td>
                 </tr>
             </tbody> 
 
