--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">friday 17/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">62 - 69 - 26 - 77 - 1</p>
-                <p class="machine">42 - 14 - 70 - 13 - 59</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">12 - 66 - 74 - 82 - 16</p>
-                <p class="machine">28 - 26 - 7 - 80 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">90 - 9 - 5 - 39 - 35</p>
-                <p class="machine">69 - 86 - 14 - 29 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">79 - 74 - 17 - 86 - 47</p>
-                <p class="machine">85 - 11 - 71 - 41 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">22 - 52 - 61 - 3 - 41</p>
-                <p class="machine">83 - 68 - 66 - 34 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">36 - 44 - 27 - 57 - 16</p>
-                <p class="machine">28 - 11 - 4 - 37 - 85</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">saturday 18/05/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">National</h3>
                 <p class="winning">77 - 5 - 45 - 82 - 27</p>
-                <p class="machine"></p>        
+                <p class="machine">33 - 10 - 48 - 44 - 16</p>        
             </article>
             <article>
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">21 - 13 - 11 - 61 - 2</p>
                 <p class="machine">78 - 86 - 29 - 53 - 41</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date"></h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">36 - 27 - 60 - 51 - 40</p>
+                <p class="machine">65 - 77 - 26 - 46 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">14 - 66 - 69 - 28 - 72</p>
+                <p class="machine">12 - 80 - 73 - 18 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">61 - 12 - 22 - 9 - 55</p>
+                <p class="machine">36 - 5 - 28 - 69 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">29 - 38 - 8 - 53 - 31</p>
+                <p class="machine">11 - 63 - 55 - 78 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">75 - 8 - 40 - 35 - 89</p>
+                <p class="machine">43 - 15 - 64 - 38 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">87 - 81 - 64 - 41 - 34</p>
+                <p class="machine">89 - 31 - 83 - 67 - 24</p>        
             </article>
         </section>
     </div>
