include the missing date

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -232,7 +232,7 @@
         </section>
 
         <section aria-label="today result">
-            <h2 class="date"></h2>
+            <h2 class="date">sunday 19/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
                 <p class="winning">36 - 27 - 60 - 51 - 40</p>
