--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">saturday 18/05/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">20 - 27 - 36 - 3 - 35</p>
-                <p class="machine">47 - 39 - 60 - 67 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">85 - 63 - 33 - 3 - 28</p>
-                <p class="machine">41 - 13 - 1 - 23 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">74 - 67 - 29 - 31 - 13</p>
-                <p class="machine">50 - 38 - 17 - 19 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">83 - 1 - 7 - 12 - 79</p>
-                <p class="machine">35 - 65 - 23 - 27 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">77 - 5 - 45 - 82 - 27</p>
-                <p class="machine">33 - 10 - 48 - 44 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">21 - 13 - 11 - 61 - 2</p>
-                <p class="machine">78 - 86 - 29 - 53 - 41</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">sunday 19/05/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -262,6 +228,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">87 - 81 - 64 - 41 - 34</p>
                 <p class="machine">89 - 31 - 83 - 67 - 24</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">monday 20/05/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">54 - 79 - 43 - 39 - 25</p>
+                <p class="machine">14 - 11 - 12 - 52 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">16 - 20 - 58 - 64 - 66</p>
+                <p class="machine">31 - 55 - 56 - 22 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">81 - 37 - 59 - 2 - 25</p>
+                <p class="machine">17 - 41 - 79 - 4 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
