--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">17 - 41 - 79 - 4 - 30</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Metro</h3>
+                <p class="winning">49 - 4 - 69 - 18 - 27</p>
+                <p class="machine">71 - 31 - 8 - 20 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">38 - 70 - 17 - 89 - 87</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">79 - 29 - 14 - 73 - 43</p>
+                <p class="machine">68 - 53 - 48 - 59 - 78</p>        
             </article>
         </section>
     </div>
