--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -1523,21 +1523,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">41</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>~May 21st tues</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">28</td>
+                    <td class="winning">30</td>
+                    <td class="winning">37</td>
+                    <td class="winning">5</td>
+                    <td class="winning" id="lbw">89</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">18</td>
+                    <td class="machine">24</td>
+                    <td class="machine">87</td>
+                    <td class="machine">83</td>
+                    <td class="machine" id="lbm">54</td>
                 </tr>
             </tbody> 
         </table>
