--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -1524,6 +1524,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">41</td>
+                    <td class="days"><small>May 21st tues</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">52</td>
+                    <td class="winning">27</td>
+                    <td class="winning">80</td>
+                    <td class="winning">58</td>
+                    <td class="winning" id="lbw">50</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">30</td>
+                    <td class="machine">76</td>
+                    <td class="machine">6</td>
+                    <td class="machine">60</td>
+                    <td class="machine" id="lbm">9</td>
+                </tr>
+            </tbody> 
+
+                                        <!-- day42-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">42</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
