--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -808,11 +808,11 @@
                     <td class="winning" id="lbw">87</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">57</td>
+                    <td class="machine">82</td>
+                    <td class="machine">31</td>
+                    <td class="machine" id="lbm">67</td>
                 </tr>
             </tbody> 
 
