--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -799,6 +799,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">21</td>
+                    <td class="days"><small>May 21st</small></td>
+                
+                    <!-- winning-->
+                    <td class="winning">49</td>
+                    <td class="winning">89</td>
+                    <td class="winning">77</td>
+                    <td class="winning">8</td>
+                    <td class="winning" id="lbw">41</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine"></td>
+                    <td class="machine" id="lbm"></td>
+                </tr>
+            </tbody> 
+
+                                    <!-- day22-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">22</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
@@ -816,8 +838,6 @@
                     <td class="machine" id="lbm"></td>
                 </tr>
             </tbody> 
-
-
         </table>
         <span>LUCKY-G</span>
     </main>
