--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">sunday 19/05/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">36 - 27 - 60 - 51 - 40</p>
-                <p class="machine">65 - 77 - 26 - 46 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">14 - 66 - 69 - 28 - 72</p>
-                <p class="machine">12 - 80 - 73 - 18 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">61 - 12 - 22 - 9 - 55</p>
-                <p class="machine">36 - 5 - 28 - 69 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">29 - 38 - 8 - 53 - 31</p>
-                <p class="machine">11 - 63 - 55 - 78 - 79</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">75 - 8 - 40 - 35 - 89</p>
-                <p class="machine">43 - 15 - 64 - 38 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">87 - 81 - 64 - 41 - 34</p>
-                <p class="machine">89 - 31 - 83 - 67 - 24</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">monday 20/05/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">MSP</h3>
                 <p class="winning">38 - 70 - 17 - 89 - 87</p>
-                <p class="machine"></p>        
+                <p class="machine">55 - 57 - 82 - 31 - 67</p>        
             </article>
             <article>
                 <h3 class="game">International</h3>
                 <p class="winning">79 - 29 - 14 - 73 - 43</p>
                 <p class="machine">68 - 53 - 48 - 59 - 78</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">tuesday 21/5/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">47 - 37 - 81 - 17 - 43</p>
+                <p class="machine">89 - 83 - 56 - 25 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">1 - 33 - 64 - 44 - 53</p>
+                <p class="machine">19 - 58 - 15 - 7 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">8 - 90 - 76 - 15 - 61</p>
+                <p class="machine">31 - 42 - 63 - 86 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">52 - 27 - 80 - 58 - 50</p>
+                <p class="machine">30 - 76 - 6 - 60 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">49 - 89 - 77 - 8 - 41</p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">28 - 30 - 37 - 5 -  89</p>
+                <p class="machine">18 - 24 - 87 - 83 - 54</p>        
             </article>
         </section>
     </div>
