--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">monday 20/05/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">54 - 79 - 43 - 39 - 25</p>
-                <p class="machine">14 - 11 - 12 - 52 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">16 - 20 - 58 - 64 - 66</p>
-                <p class="machine">31 - 55 - 56 - 22 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">81 - 37 - 59 - 2 - 25</p>
-                <p class="machine">17 - 41 - 79 - 4 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">49 - 4 - 69 - 18 - 27</p>
-                <p class="machine">71 - 31 - 8 - 20 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">38 - 70 - 17 - 89 - 87</p>
-                <p class="machine">55 - 57 - 82 - 31 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">79 - 29 - 14 - 73 - 43</p>
-                <p class="machine">68 - 53 - 48 - 59 - 78</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">tuesday 21/5/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">LUCKY-G</h3>
                 <p class="winning">49 - 89 - 77 - 8 - 41</p>
-                <p class="machine"></p>        
+                <p class="machine">14 - 46 - 16 - 39 - 1</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
                 <p class="winning">28 - 30 - 37 - 5 -  89</p>
                 <p class="machine">18 - 24 - 87 - 83 - 54</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">wednesday 22/05/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">79 - 37 - 6 - 40 - 42</p>
+                <p class="machine">69 - 62 - 18 - 9 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">24 - 76 - 51 - 26 - 45</p>
+                <p class="machine">19 - 40 - 81 - 80 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">87 - 85 - 47 - 23 - 5</p>
+                <p class="machine">38 - 16 - 44 - 4 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
