--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -809,11 +809,11 @@
                     <td class="winning" id="lbw">41</td>
 
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">46</td>
+                    <td class="machine">16</td>
+                    <td class="machine">39</td>
+                    <td class="machine" id="lbm">1</td>
                 </tr>
             </tbody> 
 
