--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -249,19 +249,19 @@
                 <p class="machine">38 - 16 - 44 - 4 - 17</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">7 - 35 - 66 - 71 - 63</p>
+                <p class="machine">42 - 22 - 70 - 85 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">84 - 23 - 17 - 65 - 71</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">22 - 4 - 28 - 68 - 86</p>
+                <p class="machine">69 - 83 - 46 - 48 - 34</p>        
             </article>
         </section>
     </div>
