--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -808,11 +808,11 @@
                     <td class="winning" id="lbw">71</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">73</td>
+                    <td class="machine">2</td>
+                    <td class="machine">49</td>
+                    <td class="machine">81</td>
+                    <td class="machine" id="lbm">88</td>
                 </tr>
             </tbody> 
 
