--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -198,40 +198,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
-            <h2 class="date">tuesday 21/5/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">47 - 37 - 81 - 17 - 43</p>
-                <p class="machine">89 - 83 - 56 - 25 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">1 - 33 - 64 - 44 - 53</p>
-                <p class="machine">19 - 58 - 15 - 7 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">8 - 90 - 76 - 15 - 61</p>
-                <p class="machine">31 - 42 - 63 - 86 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">52 - 27 - 80 - 58 - 50</p>
-                <p class="machine">30 - 76 - 6 - 60 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">49 - 89 - 77 - 8 - 41</p>
-                <p class="machine">14 - 46 - 16 - 39 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">28 - 30 - 37 - 5 -  89</p>
-                <p class="machine">18 - 24 - 87 - 83 - 54</p>        
-            </article>
-        </section>
-
-        <section aria-label="today result">
             <h2 class="date">wednesday 22/05/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -256,12 +222,46 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">84 - 23 - 17 - 65 - 71</p>
-                <p class="machine"></p>        
+                <p class="machine">73 - 2 - 49 - 81 - 88</p>        
             </article>
             <article>
                 <h3 class="game">Lucky</h3>
                 <p class="winning">22 - 4 - 28 - 68 - 86</p>
                 <p class="machine">69 - 83 - 46 - 48 - 34</p>        
+            </article>
+        </section>
+
+        <section aria-label="today result">
+            <h2 class="date">thursday 23/05/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">27 - 79 - 71 - 56 - 47</p>
+                <p class="machine">64 - 30 - 53 - 86 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">2 - 21 - 44 - 83 - 52</p>
+                <p class="machine">48 - 77 - 73 - 56 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">59 - 35 - 49 - 82 - 33</p>
+                <p class="machine">53 - 69 - 47 - 58 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
     </div>
